src/main/default/objects/TestObject__c/TestObject__c.object-meta.xml
<CustomObject>
    <description>Object with one of each field type to facilitate testing</description>
    <label>TestObject</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>TestObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TestObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>