src/main/default/objects/TestObject__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestObject</label>
    <referenceTo>TestObject__c</referenceTo>
    <relationshipLabel>TestObjects</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>