src/main/default/objects/TestObject__c/fields/TestBoolean__c.field-meta.xml
<CustomField>
    <fullName>TestBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestBoolean</label>
    <type>Checkbox</type>
</CustomField>