src/main/default/objects/TestObject__c/fields/TestCurrency__c.field-meta.xml
<CustomField>
    <fullName>TestCurrency__c</fullName>
    <label>TestCurrency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>