src/main/default/objects/TestObject__c/fields/TestDateTime__c.field-meta.xml
<CustomField>
    <fullName>TestDateTime__c</fullName>
    <label>TestDateTime</label>
    <type>DateTime</type>
</CustomField>