src/main/default/objects/TestObject__c/fields/TestNumber__c.field-meta.xml
<CustomField>
    <fullName>TestNumber__c</fullName>
    <label>TestNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>