src/main/default/objects/TestObject__c/fields/TestPicklist__c.field-meta.xml
<CustomField>
    <fullName>TestPicklist__c</fullName>
    <label>TestPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
            <value>
                <fullName>Six</fullName>
            </value>
            <value>
                <fullName>Seven</fullName>
            </value>
            <value>
                <fullName>Eight</fullName>
            </value>
            <value>
                <fullName>Nine</fullName>
            </value>
            <value>
                <fullName>Ten</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>